# trident_Bryan_-Kunz_IA_2025

./: Evaluation.py  README.md  Training.py  config_default.yaml  pyproject.toml
MLP_Data_Network/: Prepare_data.py  __init__.py
MLP_Data_Network/Network/: __init__.py  model.py
outputs/features/: CheckPoint_model_parameters.pth  config.yaml  features_scaler.pkl  n_pulses_scaler.pkl  truth_scaler.pkl
outputs/n_pulses/: CheckPoint_model_parameters.pth  config.yaml  truth_scaler.pkl
